--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 						<h3 ><img class="profile-pic" src="./images/profilePic.png" /></h3>
 						<h1>Haris Ahmed</h1>
 						<h2 class="rotate">Full Stack Software Engineer, And,  Mechanical Engineer</h2>
-						<p>A little about myself, I graduated from the New Jersey Institute of Technology with a bachelors in Mechancial Engineering,
-							I always had an interest in coding, but I had an even bigger interest in making things work and solving problems.
+						<p> I am a software engineer with a passion for both front-end and back-end development and can get any job done.
 
 						</p>
-						<p>I am a person who loves to learn about everything and to know how everything works. I beleive knowledge is the core to creativity and critical thinking.
+						<!-- <p>I am a person who loves to learn about everything and to know how everything works. I beleive knowledge is the core to creativity and critical thinking.
 							After taking a drone science class where we programmed drones using python, I wanted to learn coding right away. So as I graduated from college I went straight into a coding bootcamp (App Academy) and here I am today.
-						</p>
+						</p> -->
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
 					<div class="col-md-2"></div>
@@ -75,8 +74,8 @@
 								<i class="fa fa-laptop"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Create Functional Applications</h3>
-								<p>With the use of React, Javascript, and API's I am able to develop functionaly websites</p>
+								<h3 class="media-heading">Create Functional Applications On Time</h3>
+								<p>With the use of React, Javascript, Html, and Css I am able to develop functional websites</p>
 							</div>
 						</div>
 					</div>
@@ -100,7 +99,7 @@
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading"><a  class="resume" href="./images/Resume2023.pdf">Click to view my Resume</a></h3>
-								<p></p>
+								<p>My Resume ^</p>
 							</div>
 						</div>
 					</div>
@@ -118,7 +117,7 @@
 						<h2>My Skills</h2>
 						<h4>Stacks</h4>
 						<div class="stacks-icons" >
-							<p>I am well versed in React, Redux, JavaScript, Python, HTML5, CSS3, </p>
+							<p>I am well versed in React, Redux, JavaScript, Python, HTML5, CSS3, SQL, OOP, DS&A, Git, Github, Flask, and Express. </p>
 						<img src="./images/react.svg" style="width: 50px; height: 50px;">
 						<img src="./images/redux.svg" style="width: 50px; height: 50px;">
 						<img src="./images/javascript.svg" style="width: 50px; height: 50px;">
@@ -137,7 +136,7 @@
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
 							</div>
-						<span>React <small>95%</small></span>
+						<span>React/Redux <small>95%</small></span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
 							</div>
@@ -146,6 +145,10 @@
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 							</div>
 						<span>Object Oriented Programming <small>85%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
+							</div>
+						<span>SQL <small>85%</small></span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
 							</div>
@@ -196,29 +199,34 @@
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
 						<img src="images/risinghood.png" style="width: 100%; height: 100%;" class="img-responsive" alt="portfolio img">
-							<div class="portfolio-overlay">
-								<a href="https://risinghood.onrender.com/" class="project-link">Risinghood</a>
+						<a href="https://risinghood.onrender.com/" class="project-link">
+						<div class="portfolio-overlay">
+								Risinghood
 								<h4>Risinghood is a Robinhood clone that lets users simulate the experience of investing their money in the stock market. The user is able to buy and sell any stocks listed in the NASDAQ and the New York Stock Exchange. The site also shows company financial data and historical data charts.</h4>
-
 							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
 						<img src="images/thiscord.png" style="width: 100%; height: 100%;" class="img-responsive" alt="portfolio img">
-							<div class="portfolio-overlay">
-								<a href="https://this-cord.onrender.com/" class="project-link">Thiscord</a>
+						<a href="https://this-cord.onrender.com/" class="project-link">
+						<div class="portfolio-overlay">
+								Thiscord
 								<h4>Thiscord is a Discord clone that lets the user create servers, channels, and message other users in realtime.</h4>
 							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
 						<img src="images/airbnbs.png" style="width: 100%; height: 100%;" class="img-responsive" alt="portfolio img">
-							<div class="portfolio-overlay">
-								<a href="https://airbnbs.onrender.com/" class="project-link">Airbnbs</a>
+						<a href="https://airbnbs.onrender.com/" class="project-link">
+						<div class="portfolio-overlay">
+								Airbnbs
 								<h4>An Airbnb clone that lets you find new places to stay, host your own spots, create bookings, and leave reviews.</h4>
 							</div>
+						</a>
 					</div>
 				</div>
 			</div>
